<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="@dimen/img_width"
        android:layout_height="@dimen/img_height"
        android:src="@drawable/cajamedicamentos"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:id="@+id/imgProduct" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txvProductName"
        android:text="@string/txvName"
        android:layout_toEndOf="@id/imgProduct"
        android:layout_toRightOf="@id/imgProduct"
        android:layout_alignTop="@id/imgProduct"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvProductStock"
        android:text="@string/txvStock"
        android:layout_toEndOf="@id/imgProduct"
        android:layout_toRightOf="@id/imgProduct"
        android:layout_below="@id/txvProductName"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvProductPrice"
        android:text="@string/txvPrice"
        android:layout_toEndOf="@id/txvProductStock"
        android:layout_toRightOf="@id/txvProductStock"
        android:layout_below="@id/txvProductName"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
</RelativeLayout>